<resources>
    <string name="app_name">FinancialManager</string>
    <string name="error">Error</string>
    <string name="api_err_no_network">No internet connection</string>
    <string name="api_err_time_out">Request time out</string>
    <string name="api_err_unknown_error">Unknown error</string>
    <string name="no_internet_network">No internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="confirm_password">Confirm\npassword</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="positive_number">+%d</string>

    <string-array name="types">
        <item>Nhu cầu thiết yếu</item>
        <item>Tiết kiệm dài hạn</item>
        <item>Đầu tư giáo dục</item>
        <item>Thụ hưởng</item>
        <item>Cho đi</item>
        <item>Tự do tài chính</item>
        <item>Tổng hợp</item>
    </string-array>

    <string-array name="states">
        <item>Done</item>
        <item>Ready</item>
        <item>Waiting</item>
    </string-array>

    <string name="provider_name">com.example.nhattruong.financialmanager.MyProvider</string>

    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="details">Details</string>
    <string name="finish">Finish</string>
    <string name="retry">Retry</string>

    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="add_note">Add note</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add">Add</string>

    <string name="currency_VND">%s VND</string>
    <string name="currency_USD">%s USD</string>

    <string name="spending">Spending</string>
    <string name="incomes">Incomes</string>
    <string name="debts">Debts</string>
    <string name="amount_2_dot">Amount:</string>
    <string name="detail_2_dot">Detail:</string>
    <string name="origin_2_dot">Origin:</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="origin">Origin</string>
    <string name="state">State</string>
    <string name="amount">Amount</string>
    <string name="detail">Detail</string>
    <string name="edit_debt">Edit Debt</string>
    <string name="date_2_dot">Date:</string>
    <string name="general">General</string>
    <string name="state_2_dot">State:</string>

    <string name="waiting">Waiting</string>
    <string name="ready">Ready</string>

    <array name="list_state_debt">
        <item>@string/ready</item>
        <item>@string/waiting</item>
        <item>@string/done</item>
    </array>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="from_2_dot">From:</string>
    <string name="to_2_dot">To:</string>
    <string name="all">All</string>
    <string name="no_data">No Data</string>
</resources>
