<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/tv_detail_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_blue_black"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_8dp"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/tv_detail_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/blue_color2"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_8dp"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/origin_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/tv_detail_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/blue_color2"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_8dp"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/state_2_dot"
            android:textColor="@color/black_color"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/tv_detail_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/blue_color2"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_8dp"
        android:layout_marginEnd="@dimen/small_8dp"
        android:layout_marginStart="@dimen/small_8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/positive" />

        <RadioButton
            android:id="@+id/rd_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/negative" />
    </RadioGroup>
</LinearLayout>