<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_login"
    tools:context="com.example.nhattruong.financialmanager.mvp.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.nhattruong.financialmanager.custom_view.CustomEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_60dp"
            android:layout_marginStart="@dimen/large_60dp"
            android:background="@drawable/border_white_text"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:padding="@dimen/small_10dp"
            android:text="hoangsang1"
            android:textColor="@color/app_color"
            android:textSize="@dimen/default_text_size" />

        <com.example.nhattruong.financialmanager.custom_view.CustomEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_60dp"
            android:layout_marginStart="@dimen/large_60dp"
            android:layout_marginTop="@dimen/small_14dp"
            android:background="@drawable/border_white_text"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/small_10dp"
            android:text="123"
            android:textColor="@color/app_color"
            android:textSize="@dimen/default_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="@dimen/small_14dp"
                android:background="@drawable/border_blue_text"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/default_text_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="@dimen/small_14dp"
                android:background="@drawable/border_blue_text"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/default_text_size"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
